Completed the selected article display popup and email functionality

--- a/wp-content/themes/village-child/assets/css/fspstyles.css
+++ b/wp-content/themes/village-child/assets/css/fspstyles.css
@@ -879,7 +879,9 @@ footer .mkd-footer-top-holder {
     color:#6c6b6b;
 }
 .saved_art_img{
-    float:left;
+    float: left;
+    width: 23%;
+
 }
 .saved_art_cont_btns{
     float: right;
@@ -1524,17 +1526,220 @@ table.ai1ec-month-view {
 }
 @media only screen and (max-width: 767px) {
     .coach-profile-image{
-    float: none;
-    width: 100%;
-    padding-right: 0%;
-    padding-bottom: 20px;
-}
-.coach-profile-text{
-    float: none;
-    width: 100%;
-}
-.article-cr-cont{
-    padding-top: 20px;
-}
+        float: none;
+        width: 100%;
+        padding-right: 0%;
+        padding-bottom: 20px;
+    }
+    .coach-profile-text{
+        float: none;
+        width: 100%;
+    }
+    .article-cr-cont{
+        padding-top: 20px;
+    }
 }
 /*article created section ends here*/
+
+
+/*saved articles section starts here*/
+.saved-articles-sidelist-nw{
+    background: #ffffff;
+    overflow: hidden;
+    padding:12px 15px;
+    border-bottom: 1px solid #e6e7e8;
+}
+.sidelist-nw-innercontainer clearfix{
+    width:100%;
+}
+.sidelist-nw-imgblk{
+    float:left;
+    width:25%;
+    padding-right: 3%
+}
+.sidelist-nw-contblk{
+    float:left;
+    width:72%;
+}
+.saved-articles-sidelist-nw .sidelist-nw_cont_btns {
+    float: none;
+    overflow: hidden;
+    padding: 0;
+}
+.saved-articles-sidelist-nw .sidelist-nw_cont_btns a{
+    width: 48%;
+    float: left;
+    display: block;
+    margin-bottom: 0px;
+    font-size: 13px;
+}
+.saved-articles-sidelist-nw .sidelist-nw_cont_btns a.fsp_remove_btn{
+    margin-right: 2%;
+}
+.saved-articles-sidelist-nw .sidelist-nw_cont_btns a.fsp_readart_btn{
+    margin-left: 2%;
+    float:right;
+}
+.fsp_readart_btn.send-button {
+    color: #fff;
+    display: block;
+    margin-top: 5px;
+    text-align: center;
+    width: 48%;
+    padding:2px 0;
+    font-size: 13px;
+}
+/*popup*/
+.saved-articles-popup-nw {
+    background: #fff none repeat scroll 0 0;
+    margin: 40px auto;
+    max-width: 625px;
+    padding: 0;
+    position: relative;
+    text-align: left;
+}
+.saved-articles-popup-nw h2{
+    background: #e6e7e9;
+    font-weight: normal;
+    font-size: 14px;
+    text-align: center;
+    padding:15px 10px;
+}
+.sv-art-popup-nw-cont{
+    padding: 10px 25px;
+}
+.saved_art_form-box input{
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    margin: 15px 0 0;
+    padding: 2% 3%;
+    width: 94%;
+}
+.art-cont-dis{
+    float: left;
+    width: 95%;
+}
+.saved_art_cont-pop {
+    box-sizing: border-box;
+    float: left;
+    min-height: 117px;
+    padding: 3% 3% 0;
+    width: 76%;
+
+}
+.saved_art_cont_btns-pop {
+    float: right;
+    padding: 3%;
+    width: 18%;
+}
+
+.saved_art_cont_btns-pop a {
+    color: #fff;
+    display: block;
+    font-size: 12px;
+    margin: 0 0 10px;
+    padding: 2px 0;
+    text-align: center;
+    width: 95px;
+}
+.saved_art_cont_btns-close {
+    position: absolute;
+    right: 14px;
+    top: 10px;
+    font-size: 24px;
+}
+
+.saved_art_form-box textarea{
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    font-family: "Roboto",serif;
+    font-size: 13px;
+    /*    margin: 0 0 15px;*/
+    padding: 2% 3%;
+    width: 94%;
+
+}
+.saved-articles-cont-pop ul {
+    padding-bottom:15px;
+}
+.saved-articles-cont-pop ul li{
+    background: #ececec;
+    overflow: hidden;
+    margin-bottom: 10px;
+    position: relative;
+}
+.saved_art_action_btns-pop{
+    width: 225px;
+    margin: 0 auto;
+}
+.saved_art_action_btns-pop input {
+    color: #fff;
+    display: block;
+    float: left;
+    font-size: 13px;
+    margin: 0 0 10px;
+    padding: 4px 0;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100px;
+    line-height: 24px;
+    outline: 0;
+    cursor: pointer;
+}
+.saved_art_action_btns-pop input.fsp_cancel_btn_pop{
+    background: #f69c4a none repeat scroll 0 0;
+    border: 1px solid #e8882e;
+    margin-right: 15px;
+
+}
+.saved_art_action_btns-pop input.fsp_send_btn_pop{
+    background: #b3cc36 none repeat scroll 0 0;
+    border: 1px solid #a4bb6a;
+}
+.saved_art_cont-pop h4{
+    font-size:14px;
+}
+@media only screen and (max-width: 767px) {
+    .sv-art-popup-nw-cont {
+        padding: 0;
+    }
+   
+    .saved-articles-popup-nw h2 {
+        padding: 15px 35px;
+        line-height: 20px;
+    }
+    .art-cont-dis{
+        float:none;
+        width:100%;
+    }
+    .saved_art_cont_btns-pop {
+        float: left;
+        padding: 10px 0 0 0;
+        width: 100%;
+    }
+    .art-cont-dis .saved_art_img{
+        float:left;
+    }
+    .art-cont-dis .saved_art_img img{
+        width: 100%;
+    }
+    .saved_art_cont_btns-pop a{
+        width:100%;
+    }
+    .saved_art_img{
+        width: 30%;
+    }
+    .saved_art_cont-pop{
+         width: 61%;
+         min-height: inherit;
+    }
+}
+#errorBox-email, #errorBox-comments{
+    color:#F00;
+    font-size:12px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+/*saved articles section ends here*/
