--- a/wp-content/themes/village-child/assets/css/fspstyles.css
+++ b/wp-content/themes/village-child/assets/css/fspstyles.css
@@ -1546,8 +1546,19 @@ table.ai1ec-month-view {
 .saved-articles-sidelist-nw{
     background: #ffffff;
     overflow: hidden;
-    padding:12px 15px;
+    padding:12px 15px;  
+}
+.saved-articles-border-btm{
     border-bottom: 1px solid #e6e7e8;
+}
+.sv-art-inside-container{
+    background: #ffffff;
+    overflow: hidden;
+    border-bottom: 1px solid #e6e7e8; 
+}
+.save-article-checkbox {
+    float: left;
+    margin: 12px 0 0 10px;
 }
 .sidelist-nw-innercontainer clearfix{
     width:100%;
@@ -1742,4 +1753,152 @@ table.ai1ec-month-view {
     margin-bottom: 10px;
     margin-top: 0px;
 }
+.follow-container{
+    float:left;
+    width: 100%;
+    height: auto;
+    margin-bottom: 30px;
+}
 /*saved articles section ends here*/
+
+
+.follow-container{
+    padding-top:30px;
+}
+.follow-mani-cont-nw{
+    background: #fff;
+    overflow: hidden;
+}
+.unfollow-container-nw{
+    border-bottom: 1px solid #e6e7e8;
+    padding:20px 0;
+    overflow: hidden;
+}
+
+.follow-container-nw{
+    padding:40px 0 40px;
+    overflow: hidden;
+}
+.follow-innercont ul{
+    overflow: hidden;
+}
+.btn_flw-cont button{
+    background: #f69c4a;
+    padding: 10px 40px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid #df924c;
+}
+.unfollow-container-nw button{
+    background: #b3cc36 none repeat scroll 0 0;
+    border: 1px solid #a4bb6a;
+    padding: 10px 40px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/* Custom Checkbox */
+input[type="checkbox"], input[type="radio"] {
+	display: none;
+}
+input[type="checkbox"] + label span, input[type="radio"] + label span {
+	float: left;
+	width: 24px;
+	height: 24px;
+	margin: 0px 6px 0 0;
+	vertical-align: middle;
+	background: url(../img/check-box.jpg) left top no-repeat;
+	cursor: pointer;
+}
+input[type="checkbox"] + label span {
+	background: url(../img/check-box.jpg) left top no-repeat;
+}
+input[type="checkbox"]:checked + label span {
+	background: url(../img/check-box.jpg) -24px top no-repeat;
+}
+input[type="checkbox"]:disabled + label span {
+	background: url(../img/check-box.jpg) -25px top no-repeat;
+	opacity: 0.5;
+}
+.checkbox + .checkbox, .radio + .radio {
+    margin-top: -2px;
+}
+.checkbox label, .radio label {
+    padding-left: 0;
+}
+
+/*Custom Input css ends here*/
+.btn_flw-cont{
+    text-align: center;
+}
+.unfollow-container-nw h2{
+    float: left;
+    width: 37%;
+    padding: 7px 0 0;
+}
+.selectcat-container{
+    position: relative;
+    float: left;
+    width: 60%;
+}
+.select-inn-cnt{
+        width: 70%;
+    float: left;
+    margin-right: 15px;
+}
+/*Custom select starts here*/
+.select-inn-cnt select {
+     background: #fff url("../img/select-arrow.png")  no-repeat scroll 97% 50%;
+    color: #3f3f3f !important;
+    cursor: pointer;
+    display: block;
+    font-size: 14px;    
+    border: 1px solid #d7d7d7;
+    height: 40px;
+    padding: 8px 15px;
+    width: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+}
+.select-inn-cnt select::-ms-expand {
+    display: none;
+}
+.select-inn-cnt select:focus{
+    outline: none;
+}
+.select-inn-cnt select option {
+    padding: 3px 3px 4px;
+}
+/*Custom select ends here*/
+
+@media (min-width: 769px) and (max-width: 1200px) {
+    .follow-innercont ul li{
+        width: 50%;
+    }
+   
+}
+@media only screen and (max-width: 1200px) {
+     .unfollow-container-nw h2{
+        float: none;
+       width: 100%;
+       padding:7px 0 20px;
+    }
+    .selectcat-container{
+        width: 100%;
+        float:none;
+    }
+    .select-inn-cnt{
+        width:80%;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .select-inn-cnt{
+        width:100%;
+        margin-bottom: 15px;
+    }
+}
