Implemented the confiramtion dialog box during the selected artilce remove from popup and Reset it parent form data once user click on cancel button or close button.

--- a/wp-content/themes/village-child/assets/css/fspstyles.css
+++ b/wp-content/themes/village-child/assets/css/fspstyles.css
@@ -1659,6 +1659,7 @@ table.ai1ec-month-view {
     right: 14px;
     top: 10px;
     font-size: 24px;
+    cursor: pointer;
 }
 
 .saved_art_form-box textarea{
